--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,17 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <title>MOB - Credenciamento</title>
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+
+
   </head>
   <body>
     <noscript>Você precisa habilitar o JavaScript para executar este aplicativo.</noscript>
